--- a/hello.html
+++ b/hello.html
@@ -1,4 +1,4 @@
-<!doctype html>
+﻿<!doctype html>
 <html>
 <head>
   <meta charset="utf-8" />
@@ -7,7 +7,7 @@
 <body>
 
 	你好我的世界luolu!
-11232
+666
 
 </body>
 </html>
